# aleph_alpha_workshop_yellow_team

./: .gitignore  .gitmodules  README.md  eval.py
data/test-data/: examples.json
data/test-data/database_schemas/: car_1.sql  concert_singer.sql  convert_to_python.py  employee_hire_evaluation.sql  flight_2.sql  pets_1.sql
skill_test/: sql_skill.py  test_call.py
text_to_sql_yellow_team/: .gitignore  README.md
text_to_sql_yellow_team/.github/workflows/: deploy-application.yml  publish-skill.yml
text_to_sql_yellow_team/service/: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  pyproject.toml
text_to_sql_yellow_team/service/src/service/: db_service.py  dependencies.py  kernel.py  main.py  models.py  routes.py  settings.py  validate_settings.py
text_to_sql_yellow_team/service/src/service/tests/api_tests/: conftest.py  test_api.py
text_to_sql_yellow_team/service/src/service/tests/unit_tests/: test_kernel.py  test_settings.py
text_to_sql_yellow_team/skill/: .gitignore  .pre-commit-config.yaml  README.md  eval_schemas.py  pyproject.toml  qa.py  qa_test.py  schema.py  schema.txt
text_to_sql_yellow_team/ui/: .gitignore  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  uno.config.ts  vite.config.ts
text_to_sql_yellow_team/ui/e2e/: vue.spec.ts
text_to_sql_yellow_team/ui/src/: App.vue  main.ts
text_to_sql_yellow_team/ui/src/@core/components/: ActionButton.vue  ContentBoxLayout.vue  SkeletonPlaceholderContainer.vue
text_to_sql_yellow_team/ui/src/@core/composables/: useModal.ts
text_to_sql_yellow_team/ui/src/@core/layouts/: SkillLayout.vue
text_to_sql_yellow_team/ui/src/@core/utils/: copyToClipboard.ts
text_to_sql_yellow_team/ui/src/components/: UsecaseQaAnswerActions.vue  UsecaseQaChatEntry.vue  UsecaseQaChatEntryAnswer.vue  UsecaseQaChatEntryQuestion.vue  UsecaseQaInput.vue  UsecaseQaTopBanner.vue
text_to_sql_yellow_team/ui/src/models/: UsecaseQaChatEntry.ts
text_to_sql_yellow_team/ui/src/stores/: createStoreId.ts  usecaseQa.ts  usecaseQaChat.ts  usecaseQaInput.ts
text_to_sql_yellow_team/ui/src/utils/: http.ts
(+3 files in other folders)
