[project]
name = "text_to_sql_yellow_team-skill"
license = "Apache-2.0"
version = "0.1.0"
authors = [{ name = "Aleph Alpha Engineering", email = "engineering@aleph-alpha.com" }]
description = "Skill Example"

requires-python = "~=3.12"

dependencies = ["pharia-skill==0.11.1"]

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.9.4",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["."]
